maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:14: error: value =- is not a member of Int
      droite();sommeAngle=-1
                         ^